--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application android:debuggable="true" android:icon="@drawable/ic_launcher" android:label="@string/app_name">
-        <activity android:label="@string/app_name" android:name=".CallingListActivity">
+        <activity android:label="@string/app_name" android:name=".activity.CallingListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
