--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="0.1-SNAPSHOT" package="org.lds.community.CallingWorkFlow">
-    <uses-sdk android:minSdkVersion="8"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+	<uses-sdk android:minSdkVersion="8"/>
+	<uses-permission android:name="android.permission.INTERNET"/>
 
-    <application android:debuggable="true" android:icon="@drawable/ic_launcher" android:label="@string/app_name">
-        <activity android:label="@string/app_name" android:name=".activity.StartupActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
-    </application>
+	<application android:debuggable="true" android:icon="@drawable/ic_launcher" android:label="@string/app_name" android:name=".CallingWorkFlow">
+		<activity android:label="@string/app_name" android:name=".activity.StartupActivity">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"/>
+				<category android:name="android.intent.category.LAUNCHER"/>
+			</intent-filter>
+		</activity>
+		<activity android:name=".activity.WorkFlowActivity"/>
+	</application>
 </manifest>
