--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,6 +11,6 @@
 			</intent-filter>
 		</activity>
 		<activity android:name=".activity.WorkFlowActivity"/>
-        <activity android:name=".activity.DetailActivity"/>
-	</application>
+        <activity android:label="@string/pref_title" android:name=".activity.SettingsActivity"/>
+    </application>
 </manifest>
