Moved "Add new" event handler from activity to fragment

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,6 +11,7 @@
 			</intent-filter>
 		</activity>
 		<activity android:name=".activity.WorkFlowActivity"/>
+		<activity android:name=".activity.DetailActivity"/>
         <activity android:label="@string/pref_title" android:name=".activity.SettingsActivity"/>
     </application>
 </manifest>
