--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,13 @@
             <groupId>org.lds.stack.test</groupId>
             <artifactId>stack-test-unit</artifactId>
             <version>3.0.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.1</version>
+            <scope>test</scope>
         </dependency>
         <!-- NOTE: Roboguice DOES produce the following exception and is a non-issue (http://code.google.com/p/roboguice/issues/detail?id=161): -->
         <!-- -->
