--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
             <version>4.8.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+              <groupId>com.google.code.gson</groupId>
+              <artifactId>gson</artifactId>
+              <version>2.2.2</version>
+              <scope>test</scope>
+            </dependency>
     </dependencies>
 
 
